--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "author": "Juanjo Ortiz",
   "scripts": {
     "start": "json-server db.json --port 3001",
-    "start:watch": "json-server --watch db.json --port 3001"
+    "start:watch": "json-server --watch db.json --port 3001 --delay 3000"
   },
   "license": "ISC",
   "dependencies": {
